me api + gitlab integration
